# jetbrains-tools

./: .gitignore  README.md  build.sh  classes.toml  main.py  pyproject.toml
patches/: 0001-IJPL-199301-improve-the-visibility-of-highlights.patch  0002-Add-keyboard-shortcuts-to-Preview-Source-and-Open-in.patch  0002-Add-keyboard-shortcuts-to-Preview-Source-and-Open-in.patch.252  0002-Add-keyboard-shortcuts-to-Preview-Source-and-Open-in.patch.253  0002-Add-keyboard-shortcuts-to-Preview-Source-and-Open-in.patch.261
